--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,5 @@
 platform = espressif8266
 board = huzzah
 framework = arduino
-upload_speed = 460800
+;upload_speed = 460800
+upload_port = 192.168.0.4
