Addingh lib dependency

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,11 @@ platform = espressif8266
 board = huzzah
 framework = arduino
 ;upload_speed = 460800
-upload_port = 192.168.0.4
+;upload_port = 192.168.0.4
+lib_deps =
+  Adafruit BMP280 Library
+  Adafruit SHT31 Library
+  Adafruit Unified Sensor
+  NtpClientLib
+  RunningAverage
+  Time
